--- a/sharinpix/src/classes/SharinPixImageSearchController.cls
+++ b/sharinpix/src/classes/SharinPixImageSearchController.cls
@@ -1,5 +1,6 @@
 public with sharing class SharinPixImageSearchController { // to global if needed
     static Client clientInstance = new Client('sharinpix://34edb5d0-4dbf-47e5-a11d-9ddc34a285da:qpk0XHmupySkCsIfPXw1QXsSyNm8i7tu-baS7JzmZSdufQQ@azhar.ngrok.io/api/v1'); // Remove !
+    //static Client clientInstance = new Client('sharinpix://c655c99a-ea8d-4ffe-a772-78707668f89d:hNKW9Mx3gKdsSCcn-fmCp_hEOY5-BCOVoZ3w7rXfpwmZ3kw@scpix-pr-1224.herokuapp.com/api/v1'); // Remove !
 
     @AuraEnabled
     public static Map<String, List<Report>> getReports() {
@@ -19,7 +20,7 @@ public with sharing class SharinPixImageSearchController { // to global if neede
     }
 
     @AuraEnabled
-    public static List<String> getTagNames() {
+    public static List<String> getAllTags() {
         Map<String, Object> params = new Map<String, Object> { 'admin' => true };
         Integer page = 1;
         List<Object> tagsPage = new List<Object>();
@@ -36,11 +37,11 @@ public with sharing class SharinPixImageSearchController { // to global if neede
     }
 
     @AuraEnabled
-    public static List<String> generateSearchUrls(Id reportId, List<Object> reportParameters, String tagOperator, List<String> selectedTags, Integer pageSize) {
+    public static List<String> generateSearchUrls(Id reportId, List<Object> reportParameters, String tagOperator, List<String> tagNames, Integer pageSize) {
         System.debug('reportId : ' + reportId);
         System.debug('reportParameters : ' + reportParameters);
         System.debug('tagOperator : ' + tagOperator);
-        System.debug('selectedTags : ' + selectedTags);
+        System.debug('tagNames : ' + tagNames);
         System.debug('pageSize : ' + pageSize);
         pageSize = Integer.valueOf(pageSize); // WTF ??
 
@@ -53,14 +54,50 @@ public with sharing class SharinPixImageSearchController { // to global if neede
         Map<String, String> query;
         String queryStr;
         for (Integer i = 0; i < i + pageSize && i < albumIds.size(); i += pageSize) {
-            queryStr = generateQueryString(slice(albumIds, i, Math.min(i + pageSize, albumIds.size())), selectedTags, tagOperator);
+            queryStr = generateQueryString(slice(albumIds, i, Math.min(i + pageSize, albumIds.size())), tagNames, tagOperator);
             query = new Map<String, String> { 'q' => queryStr };
-            urls.add('https://azhar.ngrok.io/search?search_bar=false&q=' + clientInstance.token(query));
+            //urls.add('https://azhar.ngrok.io/search?search_bar=false&q=' + clientInstance.token(query));
             //urls.add('https://azhar.ngrok.io/search?search_bar=false&token=' + clientInstance.token(query));
-            //urls.add('https://app.sharinpix.com/search?search_bar=false&q=' + clientInstance.token(query));
+            //urls.add('https://scpix-pr-1224.herokuapp.com/search?search_bar=false&q=' + clientInstance.token(query));
+            //urls.add('https://scpix-pr-1224.herokuapp.com/search?search_bar=false&token=' + clientInstance.token(query));
+            urls.add('https://app.sharinpix.com/search?search_bar=false&token=' + clientInstance.token(query));
         }
         System.debug('urls: ' + JSON.serialize(urls));
         return urls;
+    }
+
+    @AuraEnabled
+    public static Map<String, Object> generateUrlAndTokens(Id reportId, List<Object> reportParameters, String tagOperator, List<String> tagNames, Integer pageSize) {
+        System.debug('reportId : ' + reportId);
+        System.debug('reportParameters : ' + reportParameters);
+        System.debug('tagOperator : ' + tagOperator);
+        System.debug('tagNames : ' + tagNames);
+        System.debug('pageSize : ' + pageSize);
+        pageSize = Integer.valueOf(pageSize); // WTF ??
+
+        List<String> tokens = new List<String>();
+        Map<String, Object> response = new Map<String, Object> {
+            'baseUrl' => 'https://azhar.ngrok.io/search?search_bar=false&token=',
+            //'baseUrl' => 'https://azhar.ngrok.io/search?search_bar=false&q=',
+            //'baseUrl' => 'https://scpix-pr-1224.herokuapp.com/search?search_bar=false&q=',
+            //'baseUrl' => 'https://scpix-pr-1224.herokuapp.com/search?search_bar=false&token=',
+            //'baseUrl' => 'https://app.sharinpix.com/search?search_bar=false&token=',
+            'tokens' => tokens
+        };
+
+        List<String> albumIds = getAlbumIdsFromReport(reportId, reportParameters);
+        if (pageSize == 0) {
+            pageSize = albumIds.size();
+        }
+        Map<String, String> query;
+        String queryStr;
+        for (Integer i = 0; i < i + pageSize && i < albumIds.size(); i += pageSize) {
+            queryStr = generateQueryString(slice(albumIds, i, Math.min(i + pageSize, albumIds.size())), tagNames, tagOperator);
+            query = new Map<String, String> { 'q' => queryStr };
+            tokens.add(clientInstance.token(query));
+        }
+        System.debug('response: ' + JSON.serialize(response));
+        return response;
     }
 
     private static List<String> getAlbumIdsFromReport(Id reportId, List<Object> reportParameters) {
@@ -101,19 +138,19 @@ public with sharing class SharinPixImageSearchController { // to global if neede
         }
     }
 
-    private static String generateQueryString(List<String> albumIds, List<String> selectedTags, String tagOperator) {
+    private static String generateQueryString(List<String> albumIds, List<String> tagNames, String tagOperator) {
         if (albumIds == null) albumIds = new List<String>();
-        if (selectedTags == null) selectedTags = new List<String>();
+        if (tagNames == null) tagNames = new List<String>();
         if (albumIds.size() == 0) return '';
         if (tagOperator == null || tagOperator == '') tagOperator = 'OR';
         if (tagOperator != 'AND' && tagOperator != 'OR') throw new SharinPixException('Invalid parameters.');
 
         String albumIdsString = '';
         albumIdsString = '"' + String.join(albumIds, '" "') + '"';
-        if (selectedTags.size() == 0) return albumIdsString;
+        if (tagNames.size() == 0) return albumIdsString;
 
-        String selectedTagsString = '"' + String.join(selectedTags, '" ' + tagOperator + ' "') + '"';
-        return 'tags:(+(' + albumIdsString + ') +(' + selectedTagsString + '))';
+        String tagNamesString = '"' + String.join(tagNames, '" ' + tagOperator + ' "') + '"';
+        return 'tags:(+(' + albumIdsString + ') +(' + tagNamesString + '))';
     }
 
     private static List<String> slice(List<String> original, Integer startIndex, Integer endIndex) {
