Add utils for org tags.

--- a/sharinpix/src/classes/Utils.cls
+++ b/sharinpix/src/classes/Utils.cls
@@ -210,6 +210,35 @@ global with sharing class Utils {
     }
 
     /**
+     * Retrieves all the tags in your organization
+     * @return List of tag objects
+     */
+    global List<Object> getOrgTags() {
+        Map<String, Object> params = new Map<String, Object> { 'admin' => true };
+        Integer page = 1;
+        List<Object> tagsPage = new List<Object>();
+        List<Object> allTags = new List<Object>();
+        do {
+            tagsPage = (List<Object>)clientInstance.get('/tags' + '?page=' + page++, params);
+            allTags.addAll(tagsPage);
+        } while (tagsPage.size() != 0);
+        return allTags;
+    }
+
+    /**
+     * Retrieves all the tags' names in your organization
+     * @return List of tag names
+     */
+    global List<String> getOrgTagNames() {
+        List<Object> allTags = getOrgTags();
+        List<String> tagNames = new List<String>();
+        for (Object o : allTags) {
+            tagNames.add((String)((Map<String, Object>)o).get('name'));
+        }
+        return tagNames;
+    }
+
+    /**
      * Retrieve list of images which have tags (TagImages) from an album
      * @param  albumId albumId to get tag images from
      * @return         List of tags on image
