--- a/sharinpix/src/classes/SharinPixSearchController.cls
+++ b/sharinpix/src/classes/SharinPixSearchController.cls
@@ -1,9 +1,9 @@
 public with sharing class SharinPixSearchController {
-    private static sharinpix.Client clientInstance = new sharinpix.Client('sharinpix://34edb5d0-4dbf-47e5-a11d-9ddc34a285da:qpk0XHmupySkCsIfPXw1QXsSyNm8i7tu-baS7JzmZSdufQQ@azhar.ngrok.io/api/v1'); // secret !
-    //String baseUrlTEMP = 'https://app.sharinpix.com/search?search_bar=false&token=';
-    static String baseUrlTEMP = 'https://azhar.ngrok.io/search?search_bar=false&token=';
-    private static final Integer TOKEN_SIZE = 2; // num ids in 1 token
-    private static final Integer BLOCK_SIZE = 4; // num rows from reports
+    //private static Client clientInstance = Client.getInstance();
+    //private static String baseUrl = 'https://app.sharinpix.com/search?search_bar=false&token=';
+    private static Client clientInstance = new Client('sharinpix://34edb5d0-4dbf-47e5-a11d-9ddc34a285da:qpk0XHmupySkCsIfPXw1QXsSyNm8i7tu-baS7JzmZSdufQQ@azhar.ngrok.io/api/v1'); // secret !
+    private static String baseUrl = 'https://azhar.ngrok.io/search?search_bar=false&token=';
+    private static final Integer TOKEN_SIZE = 25;
 
     @AuraEnabled
     public static Map<String, List<Report>> getReports() {
